# sfdata-cincensus

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
sfdata_cincensus/: __init__.py  _data.py  _faker.py  _table_writer.py  _xml_reader.py  _xml_writer.py  sfdata_cincensus - Shortcut.lnk
tests/: test_cin_faker.py  test_faker.py  test_table_writer.py  test_xml_reader.py  test_xml_writer.py
